# sector-flow

./: .env.example  .gitignore  DEPLOY_TENCENT_CLOUD.md  README.md  compose.override.example.yaml  compose.tencent.yaml  compose.yaml  prd.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  sector_flow.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: fund_flow.py  sectors.py
backend/app/collector/: akshare_fetcher.py  persistence.py  worker.py
backend/app/collector/data/: concept_allowlist.txt
backend/app/models/: fund_flow.py
backend/app/services/: fund_flow_service.py  time_axis.py
backend/scripts/: compare_akshare_intraday_sources.py
backend/test/: em_mode_check.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FundFlowChart.tsx  RankingPanel.tsx  SectorSelector.tsx  TopBar.tsx
frontend/hooks/: useFundFlow.ts
frontend/lib/: api.ts  defaultSectors.ts
