[project]
name = "sector-flow-backend"
version = "1.0.0"
description = "A股板块主力资金流向实时 API 后端"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0.30,<3",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "akshare>=1.15",
    "pandas>=2.2",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
python-preference = "managed"
